--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "coffee-script": "~1.3.3",
     "connect-assets": "~2.2.1",
     "express-coffee": "0.0.9",
-    "instagram-node-lib": "0.0.7"
+    "instagram-node-lib": "0.0.7",
+    "mongoose": "~2.7.1",
+    "cron": "~0.3.3"
   }
 }
